# greencompute-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  index.py  pyproject.toml
.github/workflows/: actions-web.yml  actions.yml
greencompute_backend/: config.py  main.py
greencompute_backend/db/: engine.py  tables.py
greencompute_backend/resources/: __init__.py  _aws.py  db.py
greencompute_backend/routes/: __init__.py  llm.py  models.py  retrieval.py
greencompute_backend/services/: __init__.py
greencompute_backend/services/llm/: models.py  router.py  svc.py
greencompute_backend/services/llm/prompts/: base.txt  cite.txt
greencompute_backend/services/ml/: models.py  router.py  svc.py
nginx/: Dockerfile  nginx.conf
notebooks/: colpali.ipynb  indexation.ipynb  main.ipynb  optimized_rag.json  optimized_rag_v2.json  output.txt  pgvec.ipynb  prompt-optimization-v2.ipynb  prompt-optimization.ipynb  rag.ipynb  scoring.ipynb  synthetic_generation.ipynb  synthetic_genv2.ipynb  testset.json
notebooks/synthetics/: synthetic_dataset_revised.json
scripts/: promptopt.py
tests/: test_alpha.py  test_main.py
