[tool.poetry]
name = "greencompute_backend"
version = "0.0.0"
description = ""
authors = ["Elias Tavarez <etav@berkeley.edu>"]
readme = "README.md"
packages = [{ include = "greencompute_backend", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
boto3 = "^1.35.29"
loguru = "^0.7.2"
langchain = "^0.3.1"
pymupdf = "^1.24.10"
sentence-transformers = "^3.1.1"
langchain-community = "^0.3.1"
langchain-chroma = "^0.1.4"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
loguru = "^0.7.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]
