[tool.poetry]
name = "greencompute_backend"
version = "0.0.0"
description = ""
authors = ["Elias Tavarez <etav@berkeley.edu>"]
readme = "README.md"
packages = [{ include = "greencompute_backend", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
boto3 = "^1.35.29"
loguru = "^0.7.2"
langchain = "^0.3.1"
sentence-transformers = "^3.1.1"
langchain-community = "^0.3.1"
langchain-chroma = "^0.1.4"
python-dotenv = "^1.0.1"
pgvector = "^0.3.4"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
python-multipart = "^0.0.12"
xgboost = "^2.1.1"
langchain-huggingface = "^0.1.0"
pandas = "^2.2.3"
langchain-aws = "^0.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
loguru = "^0.7.2"
deepeval = "^1.3.9"
chromadb = "0.5.3"
ragas = "^0.2.1"
nltk = "^3.9.1"
pymupdf = "^1.24.10"
colpali-engine = "^0.3.0"
amazon-textract-textractor = "^1.8.3"
ipywidgets = "^8.1.5"
pdf2image = "^1.17.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]
